# luxnix-refactor

./: .gitignore  ansible.cfg  devenv.nix  flake.nix  hello.py  pyproject.toml  readme.md
.github/workflows/: ci.yml
ansible/: ansible-cmdb-readme.md  ansible.cfg  overview.html
ansible/cmdb/: gc-06  gc-07  gc-08  gc-09  gs-01  gs-02  s-01  s-02  s-03  s-04
ansible/inventory/: hosts.ini
ansible/inventory/group_vars/: all.yml
ansible/inventory/host_vars/: gc-06.yml  s-01.yml
ansible/modules/: lx_administration
ansible/playbooks/: base-servers-clear-luxnix-production.yml  ensure_users.yml  generate-passwords.yml  initialize_luxnix.yml  managed-clear-luxnix-production.yml  managed-initialize_luxnix.yml  managed-rebuild-nix.yml  managed-update_luxnix.yml  update-managed-luxnix.yml  update_luxnix.yml
cmdb/: gc-06.html  gc-07.html  gc-08.html  gc-09.html  gs-01.html  gs-02.html  index.html  s-01.html  s-02.html  s-03.html  s-04.html
devlog/: 2024-12-29.md  git.md  todo.md  vscode.md
examples/systems/gc-template/: luxnix.nix  roles.nix  services.nix
inventory/: hosts.ini
inventory/group_vars/: all.yml
inventory/host_vars/: gc-06.yml
lib/deploy/: default.nix
lx_administration/: __init__.py
lx_administration/password/: __init__.py  generator.py
lx_administration/ssh/: __init__.py  generate_key.py
overlays/hyprpanel/: default.nix
scripts/: ansible-cmdb.sh  custom_password_generator.py
tests/password/: test_password_generator.py
tests/ssh/: test_generate_key.py
tmux/: all-luxnix-dir.sh  cheatsheet.md  init-server-ssh.sh
(+191 files in other folders)
